add AND and OR Logic

--- a/AFC_NORTH_APPG.ipynb
+++ b/AFC_NORTH_APPG.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOAkSTMchTPbhhukzVUcsKO",
+      "authorship_tag": "ABX9TyPyL7iE/X91qCR83kf/gKMM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "BAf7J2n5IGxr"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -46,17 +46,15 @@
       "metadata": {
         "id": "tQkRKwLXIbUh"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "nrXFDHi7IpD1"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "42JATJosK5L5"
+      }
     },
     {
       "cell_type": "markdown",
@@ -66,6 +64,69 @@
       "metadata": {
         "id": "WwoftGwcIt2T"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Find the teams that have an average ppg of at least 24 and 8 wins\n",
+        "query_AND = \"SELECT team_name, average_ppg, wins_2025 FROM AFC_North_APPG WHERE average_ppg >= 24 AND wins_2025 >= 8\"\n",
+        "for row in conn.execute(query_AND):\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "id": "qGwc0yVtLSJL",
+        "outputId": "752b8db7-31b9-4811-85ad-1d5e0b969a45",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Ravens', 24.9, 8)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# The logic of AND and OR"
+      ],
+      "metadata": {
+        "id": "jawAhLmsLpEs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#find the teams that have an average ppg of at least 24 or 8 wins\n",
+        "query_OR = \"SELECT team_name, average_ppg, wins_2025 FROM AFC_North_APPG WHERE average_ppg >= 24 OR wins_2025 >= 8\"\n",
+        "for row in conn.execute(query_OR):\n",
+        "  print(row)"
+      ],
+      "metadata": {
+        "id": "PVVAFiwALcSZ",
+        "outputId": "b80de267-d41c-4fa9-8654-1a9f26a8f4e9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Steelers', 23.4, 10)\n",
+            "('Ravens', 24.9, 8)\n",
+            "('Bengals', 24.4, 6)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -86,19 +147,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bS7U0wp8I0-2",
-        "outputId": "76359ae8-3827-4860-9ac8-49a0d6a871b5"
+        "outputId": "9d4db54c-2c7f-4430-b740-4ddb1f1e6da9"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<sqlite3.Cursor at 0x7e668f712340>"
+              "<sqlite3.Cursor at 0x7cc5ca8b9040>"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -128,19 +189,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "z94beyI_JIGx",
-        "outputId": "542fccc2-c684-43ea-f02a-3ee25dbf24b3"
+        "outputId": "ee3b2049-9eb5-43f4-a0e4-9bb693848a59"
       },
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<sqlite3.Cursor at 0x7e668ed91a40>"
+              "<sqlite3.Cursor at 0x7cc5ca8b97c0>"
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 4
         }
       ]
     },
@@ -167,9 +228,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cKW83jJmJ-zm",
-        "outputId": "52ab9905-50c4-4c9c-9547-5ae0afb2055b"
+        "outputId": "3809e7cd-86ee-469a-e77f-13f4203ad8ab"
       },
-      "execution_count": 9,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,9 +265,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ALlL4hfTKI25",
-        "outputId": "91d27a2c-f058-477e-fdd0-c59d2836676f"
+        "outputId": "c6f5d8a9-4b74-4bad-bb15-2953b4beb585"
       },
-      "execution_count": 10,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
