add AND and OR logic

--- a/AFC_NORTH_APPG.ipynb
+++ b/AFC_NORTH_APPG.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPyL7iE/X91qCR83kf/gKMM",
+      "authorship_tag": "ABX9TyMtmeWDGFuOAg4pBd7DiGhZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "BAf7J2n5IGxr"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "tQkRKwLXIbUh"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,7 +80,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,78 +88,6 @@
           "text": [
             "('Ravens', 24.9, 8)\n"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# The logic of AND and OR"
-      ],
-      "metadata": {
-        "id": "jawAhLmsLpEs"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#find the teams that have an average ppg of at least 24 or 8 wins\n",
-        "query_OR = \"SELECT team_name, average_ppg, wins_2025 FROM AFC_North_APPG WHERE average_ppg >= 24 OR wins_2025 >= 8\"\n",
-        "for row in conn.execute(query_OR):\n",
-        "  print(row)"
-      ],
-      "metadata": {
-        "id": "PVVAFiwALcSZ",
-        "outputId": "b80de267-d41c-4fa9-8654-1a9f26a8f4e9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "('Steelers', 23.4, 10)\n",
-            "('Ravens', 24.9, 8)\n",
-            "('Bengals', 24.4, 6)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#define a structure for the data table\n",
-        "conn.execute('''\n",
-        "CREATE TABLE AFC_North_APPG(\n",
-        "  team_name TEXT PRIMARY KEY NOT NULL,\n",
-        "  city TEXT,\n",
-        "  average_ppg REAL,\n",
-        "  wins_2025 INTEGER,\n",
-        "  losses_2025 INTEGER)\n",
-        "  STRICT;\n",
-        "  ''')\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bS7U0wp8I0-2",
-        "outputId": "9d4db54c-2c7f-4430-b740-4ddb1f1e6da9"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<sqlite3.Cursor at 0x7cc5ca8b9040>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
         }
       ]
     },
@@ -191,7 +119,7 @@
         "id": "z94beyI_JIGx",
         "outputId": "ee3b2049-9eb5-43f4-a0e4-9bb693848a59"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -230,7 +158,7 @@
         "id": "cKW83jJmJ-zm",
         "outputId": "3809e7cd-86ee-469a-e77f-13f4203ad8ab"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +195,7 @@
         "id": "ALlL4hfTKI25",
         "outputId": "c6f5d8a9-4b74-4bad-bb15-2953b4beb585"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,6 +205,70 @@
             "('Ravens', 8)\n",
             "('Bengals', 6)\n",
             "('Browns', 5)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# The Logic of AND and OR"
+      ],
+      "metadata": {
+        "id": "OBipb9QdMbAB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Find the teams that have an average ppg of at least 24 and 8 wins\n",
+        "query_AND = \"SELECT team_name, average_ppg, wins_2025 FROM AFC_North_APPG WHERE average_ppg >= 24 AND wins_2025 >= 8\"\n",
+        "for row in conn.execute(query_AND):\n",
+        "  print(row)\n"
+      ],
+      "metadata": {
+        "id": "b6CHWrbiMqbM",
+        "outputId": "af743b4a-c5f4-4413-ea0b-383e6efd745e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Ravens', 24.9, 8)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#find the teams that have an average ppg of at least 24 or 8 wins\n",
+        "query_OR = \"SELECT team_name, average_ppg, wins_2025 FROM AFC_North_APPG WHERE average_ppg >= 24 OR wins_2025 >= 8\"\n",
+        "for row in conn.execute(query_OR):\n",
+        "  print(row)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "SS1ubf8KMzyc",
+        "outputId": "d776d443-58fd-4369-a9a7-500eeefba521",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Steelers', 23.4, 10)\n",
+            "('Ravens', 24.9, 8)\n",
+            "('Bengals', 24.4, 6)\n"
           ]
         }
       ]
